fixes for ios and mobile - no touch callouts on overlays - make tooltip triggers clickable on ios - make overlays clickable on ios - make ios panel demo clickable on ios - disable page zooming on mobile

--- a/addon/styles/components/ui-popup--tooltip.scss
+++ b/addon/styles/components/ui-popup--tooltip.scss
@@ -42,6 +42,14 @@
     width: 100vw;
     height: 100vw;
     z-index: 1;
+
+    // Makes clickable in iOS
+    cursor: pointer;
+
+    // Disables iOS touch callouts
+    -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
+    -webkit-touch-callout: none;
+    user-select: none;
   }
 
   &--element-attached-left {
