--- a/addon/styles/components/ui-tooltip--default.scss
+++ b/addon/styles/components/ui-tooltip--default.scss
@@ -8,5 +8,6 @@
     cursor: help;
     color: #1787e5;
     border-bottom: dotted 1px;
+    cursor: pointer;
   }
 }
