--- a/tests/dummy/app/styles/app.scss
+++ b/tests/dummy/app/styles/app.scss
@@ -1,4 +1,4 @@
 body {
-  padding: 20px;
+  padding: 10px;
   background: #f5f8f9;
 }
